# asimon

./: .gitignore  CMakeLists.txt  DESCRIPTION  FindR.cmake  NAMESPACE  README.md  configure  configure.ac  main.R  main.c  vector.c  vector.h
R/: asimon.R
man/: asimon.Rd
src/: Makevars.in  asimon.c  vector.h
